[metadata]
name = plover-stenotype-vim
version = 1.0.0
description = Plover Stenotype layout but with extra keys for vim
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Josiah-tan/plover-stenotype-vim
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev8
py_modules =
	stenotype_vim

[options.entry_points]
plover.system =
	stenotype vim = stenotype_vim
